--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/20/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.6&#176;F</td>
+        <td class="data">53.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.871 inHg (0.005)</td>
+        <td class="data">29.871 inHg (0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.4&#176;F</td>
+        <td class="data">77.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:47:52 AM</td>
+          <td class="data">06:48:37 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:05:53 PM</td>
+          <td class="data">07:04:25 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,16 +153,16 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="05:14:00 PM">
-            90.3</span><br/>
-          <span title="05:54:36 AM">
-            51.4</span>
+          <span title="12:00:16 AM">
+            64.4</span><br/>
+          <span title="12:03:10 AM">
+            64.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:42:47 PM (Wednesday)">
-            96.4</span><br/>
-          <span title="06:54:23 AM (Wednesday)">
-            46.1</span>
+          <span title="12:00:16 AM (Sunday)">
+            64.4</span><br/>
+          <span title="12:03:10 AM (Sunday)">
+            64.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="05:14:00 PM" class="hival">
-            90.3</span>
+          <span title="12:00:16 AM" class="hival">
+            64.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:42:47 PM (Wednesday)" class="hival">
-            96.4</span>
+          <span title="12:00:16 AM (Sunday)" class="hival">
+            64.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:54:36 AM" class="loval">
-            51.4</span>
+          <span title="12:03:10 AM" class="loval">
+            64.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:54:23 AM (Wednesday)" class="loval">
-            46.1</span>
+          <span title="12:03:10 AM (Sunday)" class="loval">
+            64.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -235,16 +235,16 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:59:35 AM">
-            56.7</span><br/>
-          <span title="05:45:12 AM">
-            47.4</span>
+          <span title="12:00:16 AM">
+            53.6</span><br/>
+          <span title="12:03:10 AM">
+            53.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:54:31 AM (Friday)">
-            57.4</span><br/>
-          <span title="04:50:46 PM (Wednesday)">
-            21.8</span>
+          <span title="12:00:16 AM (Sunday)">
+            53.6</span><br/>
+          <span title="12:03:10 AM (Sunday)">
+            53.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -269,16 +269,16 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:16:28 AM">
-            90</span><br/>
-          <span title="05:12:05 PM">
-            28</span>
+          <span title="12:00:04 AM">
+            68</span><br/>
+          <span title="12:00:04 AM">
+            68</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:40:53 AM (Monday)">
-            95</span><br/>
-          <span title="03:41:12 PM (Wednesday)">
-            8</span>
+          <span title="12:00:04 AM (Sunday)">
+            68</span><br/>
+          <span title="12:00:04 AM (Sunday)">
+            68</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -303,16 +303,16 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="08:35:01 AM">
-            29.972</span><br/>
-          <span title="05:17:01 PM">
-            29.807</span>
+          <span title="12:01:00 AM">
+            29.872</span><br/>
+          <span title="12:02:00 AM">
+            29.869</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:03:01 AM (Tuesday)">
-            30.054</span><br/>
-          <span title="05:17:01 PM (Saturday)">
-            29.807</span>
+          <span title="12:01:00 AM (Sunday)">
+            29.872</span><br/>
+          <span title="12:02:00 AM (Sunday)">
+            29.869</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -355,7 +355,7 @@
             0.00</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:01 AM (Sunday)">
+          <span title="12:00:04 AM (Sunday)">
             0.00</span>
         </td>
         <td class="data new_row hilo_month">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="10:18:11 AM">
-            15</span><br/>
-          301
+          <span title="12:00:54 AM">
+            7</span><br/>
+          10
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:43:42 PM (Monday)">
-            23</span><br/>
-          166
+          <span title="12:00:54 AM (Sunday)">
+            7</span><br/>
+          10
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -407,9 +407,9 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          3</td>
+          4</td>
         <td class="data new_row hilo_week">
-          3</td>
+          4</td>
         <td class="data new_row hilo_month">
           2</td>
         <td class="data new_row hilo_year">
@@ -439,12 +439,12 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          3<br/>
-          356
+          4<br/>
+          7
         </td>
         <td class="data new_row hilo_week">
-          1<br/>
-          222
+          4<br/>
+          7
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,16 +470,16 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:24:02 PM">
-            83.0</span><br/>
-          <span title="06:12:00 AM">
-            71.5</span>
+          <span title="12:01:00 AM">
+            77.4</span><br/>
+          <span title="12:00:04 AM">
+            77.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:35:02 PM (Friday)">
-            85.1</span><br/>
-          <span title="05:43:00 AM (Thursday)">
-            70.6</span>
+          <span title="12:01:00 AM (Sunday)">
+            77.4</span><br/>
+          <span title="12:00:04 AM (Sunday)">
+            77.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -505,16 +505,16 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="09:28:01 AM">
-            53</span><br/>
-          <span title="06:26:02 PM">
-            40</span>
+          <span title="12:00:04 AM">
+            43</span><br/>
+          <span title="12:00:04 AM">
+            43</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:28:01 AM (Saturday)">
-            53</span><br/>
-          <span title="05:44:02 PM (Wednesday)">
-            26</span>
+          <span title="12:00:04 AM (Sunday)">
+            43</span><br/>
+          <span title="12:00:04 AM (Sunday)">
+            43</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 9 hours, 12 minutes</td>
+      <td class="data">18 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 9 hours, 12 minutes</td>
+      <td class="data">18 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
