--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/20/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,15 +84,15 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.3<br/>
-            <span class="timestamp">05:14:00 PM</span><br/>
-            51.4<br/>
-            <span class="timestamp">05:54:36 AM</span>
+          <td class="data new_row">64.4<br/>
+            <span class="timestamp">12:00:16 AM</span><br/>
+            64.2<br/>
+            <span class="timestamp">12:03:10 AM</span>
           </td>
-          <td class="data new_row">96.4<br/>
-            <span class="timestamp">02:42:47 PM (Wednesday)</span><br/>
-            46.1<br/>
-            <span class="timestamp">06:54:23 AM (Wednesday)</span>
+          <td class="data new_row">64.4<br/>
+            <span class="timestamp">12:00:16 AM (Sunday)</span><br/>
+            64.2<br/>
+            <span class="timestamp">12:03:10 AM (Sunday)</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">09/06/2020 04:04:42 PM</span><br/>
@@ -113,11 +113,11 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.3<br/>
-            <span class="timestamp">05:14:00 PM</span>
+          <td class="data new_row">64.4<br/>
+            <span class="timestamp">12:00:16 AM</span>
           </td>
-          <td class="data new_row">96.4<br/>
-            <span class="timestamp">02:42:47 PM (Wednesday)</span>
+          <td class="data new_row">64.4<br/>
+            <span class="timestamp">12:00:16 AM (Sunday)</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">09/06/2020 04:04:42 PM</span>
@@ -132,11 +132,11 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">51.4<br/>
-            <span class="timestamp">05:54:36 AM</span>
+          <td class="data new_row">64.2<br/>
+            <span class="timestamp">12:03:10 AM</span>
           </td>
-          <td class="data new_row">46.1<br/>
-            <span class="timestamp">06:54:23 AM (Wednesday)</span>
+          <td class="data new_row">64.2<br/>
+            <span class="timestamp">12:03:10 AM (Sunday)</span>
           </td>
           <td class="data new_row">45.6<br/>
             <span class="timestamp">09/12/2020 07:15:43 AM</span>
@@ -151,15 +151,15 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">56.7<br/>
-            <span class="timestamp">09:59:35 AM</span><br/>
-            47.4<br/>
-            <span class="timestamp">05:45:12 AM</span>
+          <td class="data new_row">53.6<br/>
+            <span class="timestamp">12:00:16 AM</span><br/>
+            53.4<br/>
+            <span class="timestamp">12:03:10 AM</span>
           </td>
-          <td class="data new_row">57.4<br/>
-            <span class="timestamp">09:54:31 AM (Friday)</span><br/>
-            21.8<br/>
-            <span class="timestamp">04:50:46 PM (Wednesday)</span>
+          <td class="data new_row">53.6<br/>
+            <span class="timestamp">12:00:16 AM (Sunday)</span><br/>
+            53.4<br/>
+            <span class="timestamp">12:03:10 AM (Sunday)</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">09/02/2020 01:24:38 PM</span><br/>
@@ -180,15 +180,15 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">90<br/>
-            <span class="timestamp">05:16:28 AM</span><br/>
-            28<br/>
-            <span class="timestamp">05:12:05 PM</span>
+          <td class="data new_row">68<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            68<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
-          <td class="data new_row">95<br/>
-            <span class="timestamp">07:40:53 AM (Monday)</span><br/>
-            8<br/>
-            <span class="timestamp">03:41:12 PM (Wednesday)</span>
+          <td class="data new_row">68<br/>
+            <span class="timestamp">12:00:04 AM (Sunday)</span><br/>
+            68<br/>
+            <span class="timestamp">12:00:04 AM (Sunday)</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">09/14/2020 07:40:53 AM</span><br/>
@@ -209,15 +209,15 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.972<br/>
-            <span class="timestamp">08:35:01 AM</span><br/>
-            29.807<br/>
-            <span class="timestamp">05:17:01 PM</span>
+          <td class="data new_row">29.872<br/>
+            <span class="timestamp">12:01:00 AM</span><br/>
+            29.869<br/>
+            <span class="timestamp">12:02:00 AM</span>
           </td>
-          <td class="data new_row">30.054<br/>
-            <span class="timestamp">10:03:01 AM (Tuesday)</span><br/>
-            29.807<br/>
-            <span class="timestamp">05:17:01 PM (Saturday)</span>
+          <td class="data new_row">29.872<br/>
+            <span class="timestamp">12:01:00 AM (Sunday)</span><br/>
+            29.869<br/>
+            <span class="timestamp">12:02:00 AM (Sunday)</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09/02/2020 09:40:02 AM</span><br/>
@@ -253,7 +253,7 @@
           </td>
           <td class="data new_row">
             0.00<br/>
-            <span class="timestamp">12:00:01 AM (Sunday)</span>
+            <span class="timestamp">12:00:04 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             0.00<br/>
@@ -275,14 +275,14 @@
             &#176;
           </td>
           <td class="data new_row">
-            15<br/>
-            301<br/>
-            <span class="timestamp">10:18:11 AM</span>
+            7<br/>
+            10<br/>
+            <span class="timestamp">12:00:54 AM</span>
           </td>
           <td class="data new_row">
-            23<br/>
-            166<br/>
-            <span class="timestamp">04:43:42 PM (Monday)</span>
+            7<br/>
+            10<br/>
+            <span class="timestamp">12:00:54 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -304,9 +304,9 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            3</td>
+            4</td>
           <td class="data new_row">
-            3</td>
+            4</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -334,12 +334,12 @@
             &#176;
           </td>
           <td class="data new_row">
-            3<br/>
-            356
+            4<br/>
+            7
           </td>
           <td class="data new_row">
-            1<br/>
-            222
+            4<br/>
+            7
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,16 +361,16 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            83.0<br/>
-            <span class="timestamp">06:24:02 PM</span><br/>
-            71.5<br/>
-            <span class="timestamp">06:12:00 AM</span>
+            77.4<br/>
+            <span class="timestamp">12:01:00 AM</span><br/>
+            77.3<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
-            85.1<br/>
-            <span class="timestamp">06:35:02 PM (Friday)</span><br/>
-            70.6<br/>
-            <span class="timestamp">05:43:00 AM (Thursday)</span>
+            77.4<br/>
+            <span class="timestamp">12:01:00 AM (Sunday)</span><br/>
+            77.3<br/>
+            <span class="timestamp">12:00:04 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             101.9<br/>
@@ -396,16 +396,16 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            53<br/>
-            <span class="timestamp">09:28:01 AM</span><br/>
-            40<br/>
-            <span class="timestamp">06:26:02 PM</span>
+            43<br/>
+            <span class="timestamp">12:00:04 AM</span><br/>
+            43<br/>
+            <span class="timestamp">12:00:04 AM</span>
           </td>
           <td class="data new_row">
-            53<br/>
-            <span class="timestamp">09:28:01 AM (Saturday)</span><br/>
-            26<br/>
-            <span class="timestamp">05:44:02 PM (Wednesday)</span>
+            43<br/>
+            <span class="timestamp">12:00:04 AM (Sunday)</span><br/>
+            43<br/>
+            <span class="timestamp">12:00:04 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             63<br/>
