--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:19:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.1&#176;F</td>
+        <td class="data">64.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.1&#176;F</td>
+        <td class="data">64.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.1&#176;F</td>
+        <td class="data">64.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.7&#176;F</td>
+        <td class="data">54.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">69%</td>
+        <td class="data">70%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.870 inHg (-0.001)</td>
+        <td class="data">29.867 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNE (22&#176;)</td>
+        <td class="data">5 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.3&#176;F</td>
+        <td class="data">77.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:16 AM">
             64.4</span><br/>
-          <span title="12:08:48 AM">
-            64.1</span>
+          <span title="12:21:38 AM">
+            64.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:16 AM (Sunday)">
             64.4</span><br/>
-          <span title="12:08:48 AM (Sunday)">
-            64.1</span>
+          <span title="12:21:38 AM (Sunday)">
+            64.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:48 AM" class="loval">
-            64.1</span>
+          <span title="12:21:38 AM" class="loval">
+            64.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:08:48 AM (Sunday)" class="loval">
-            64.1</span>
+          <span title="12:21:38 AM (Sunday)" class="loval">
+            64.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:13:12 AM">
-            53.8</span><br/>
+          <span title="12:23:28 AM">
+            54.0</span><br/>
           <span title="12:08:48 AM">
             53.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:13:12 AM (Sunday)">
-            53.8</span><br/>
+          <span title="12:23:28 AM (Sunday)">
+            54.0</span><br/>
           <span title="12:08:48 AM (Sunday)">
             53.3</span>
         </td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:13:12 AM">
-            69</span><br/>
+          <span title="12:23:28 AM">
+            70</span><br/>
           <span title="12:00:04 AM">
             68</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:13:12 AM (Sunday)">
-            69</span><br/>
+          <span title="12:23:28 AM (Sunday)">
+            70</span><br/>
           <span title="12:00:04 AM (Sunday)">
             68</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 9 hours, 32 minutes</td>
+      <td class="data">18 days, 9 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 9 hours, 32 minutes</td>
+      <td class="data">18 days, 9 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
